<resources>
    <string name="app_name">Meater</string>
    <string name="log_meat">Enrengistrez votre %1$s :</string>
    <string name="meat">meat</string>
    <string name="no_meat">no Meat</string>
    <string name="consumption_week">Cette semaine, Vous avez consommé de la viande sur</string>
    <string name="number_times_meat">%1$d repas</string>
    <string name="breakfast">petit-déjeuner</string>
    <string name="lunch">déjeuner</string>
    <string name="snack">goûter</string>
    <string name="dinner">dîner</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">Cette email est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="txt_email">Email :</string>
    <string name="txt_password">Mot de passe :</string>
    <string name="btn_login">Connexion</string>
    <string name="error_register">L\'inscription a échoué, merci de réessayer.</string>
    <string name="error_authentification">L\'authetification a échoué. Vérifiez votre email et mot de passe.</string>
    <string name="txt_password_check">Confirmez le mot de passe :</string>
    <string name="error_invalid_check_password">Les mots de passe ne sont pas identiques.</string>
    <string name="txt_signin">Pas encore inscrit ?</string>
    <string name="txt_login">Vous possédez déjà un compte ?</string>
    <string name="error_update_data">La connexion a échoué. La consommation peut ne pas être à jour</string>
    <string name="error_send_data">La connexion a échoué. Nous n\'avons pas pu ajouter votre repas. Merci de réessayer.</string>
    <string name="logout">déconnexion</string>
    <string name="title">Meater</string>
    <string name="txt_calendar_meat">Calendrier de consommation de viande :</string>
    <string name="infos">Informations</string>
    <string name="txt_about_me">Application crée par Dusterherz</string>
    <string name="img_github">Icône github</string>
    <string name="img_twitter">icône twitter</string>
    <string name="txt_about_icon">Icône steak crée par Freepik (http://www.freepik.com) et disponible sur Flaticon (http://www.flaticon.com). Icône Twitter et Github crée par icons8 (https://icons8.com).</string>
    <string name="txt_about_calendar">Calendrier crée avec l\'aide de MaterialCalendarView (https://github.com/prolificinteractive/material-calendarview/)</string>
</resources>
