<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.dusterherz.meater.LoginActivity">


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/edt_email"
        android:text="@string/txt_password"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/txt_password">
        
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_password_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/til_password"
        android:visibility="gone"
        android:text="@string/txt_password_check"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/txt_password_check"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/til_password_check"
        android:text="@string/txt_signin"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/txt_signin"
        android:paddingStart="@dimen/button_horizontal_margin"
        android:paddingEnd="@dimen/button_horizontal_margin"
        android:textColor="@color/white"
        android:text="@string/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"/>

</android.widget.RelativeLayout>
