<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_log_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_meat"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/button_meat"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="12dp"
                android:layout_marginRight="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/meat"
                android:src="@drawable/steak"
                android:onClick="incrementMeatCounter"/>

            <ImageView
                android:id="@+id/button_no_meat"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="12dp"
                android:layout_marginLeft="@dimen/button_horizontal_margin"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/no_meat"
                android:src="@drawable/no_steak"
                android:layout_toRightOf="@id/button_meat"
                android:layout_toEndOf="@id/button_meat"/>

        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>